--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
   <div class="sidebar-item">
     <div class="sidebar-personal-info">
       <div class="sidebar-personal-info-section">
-        <a href="http://gravatar.com/{{ site.author.gravatar }}">
+        <a href="https://github.com/aleatorik">
           <img
             src="http://www.gravatar.com/avatar/{{ site.author.gravatar }}?s=350"
             title="View on Gravatar"
@@ -22,11 +22,19 @@
       {% assign current_index = 0 %}
       <div class="sidebar-personal-info-section">
         <p>
-          Follow me: {% for contact in site.author.contact %} {% assign iconname
+          Contact : {% for contact in site.author.contact %} {% assign iconname
           = contact[0] %} {% if contact[0] == 'email' %} {% assign iconname =
           'envelope' %} {% endif %}
           <a href="{{ contact[1] }}">
             <i class="fa fa-{{ iconname }}" aria-hidden="true"></i>
+          </a>
+          |
+          <a href="https://www.facebook.com/vates0328">
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+          </a>
+          |
+          <a href="mailto:vates0328@gmail.com">
+            <i class="fa fa-envelope" aria-hidden="true"></i>
           </a>
           {% assign current_index = current_index | plus: 1 %} {% if
           current_index != len %}|{% endif %} {% endfor %}
@@ -65,7 +73,7 @@
 
     {% endfor %}
 
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+    <!--<span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
   </nav>
 
   <div class="sidebar-item">
