--- a/_scss/component/_masthead.scss
+++ b/_scss/component/_masthead.scss
@@ -5,11 +5,11 @@
  */
 
 .masthead {
-  padding-top:    1rem;
+  padding-top: 1rem;
   padding-bottom: 1rem;
   margin-bottom: 3rem;
   border-bottom: 1px solid $lightgrey;
-  background-color: rgba(255,255,255,0.75);
+  background-color: rgba(255, 255, 255, 0.75);
   @media (min-width: 30rem) {
     position: fixed;
     width: 100%;
@@ -23,7 +23,7 @@
       text-decoration: none;
     }
     small {
-      font-size: 75%;
+      font-size: 85%;
       font-weight: 400;
       color: $masthead-title-small-color;
       letter-spacing: 0;
