feat: Update my profile picture

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,11 +8,7 @@
     <div class="sidebar-personal-info">
       <div class="sidebar-personal-info-section">
         <a href="https://github.com/aleatorik">
-          <img
-            src="http://www.gravatar.com/avatar/{{ site.author.gravatar }}?s=350"
-            title="View on Gravatar"
-            alt="View on Gravatar"
-          />
+          <img src="public/profile.jpeg" />
         </a>
       </div>
       <div class="sidebar-personal-info-section">
