fix: Fix the profile picture that is not shown
Before this fix, the profile picture is only shown in Home category.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
     <div class="sidebar-personal-info">
       <div class="sidebar-personal-info-section">
         <a href="https://github.com/aleatorik">
-          <img src="public/profile.jpeg" />
+          <img src="/public/profile.png" alt="profile picture" />
         </a>
       </div>
       <div class="sidebar-personal-info-section">
