--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,6 +12,9 @@
         </a>
       </div>
       <div class="sidebar-personal-info-section">
+        <p>DASEUL SONG</p>
+      </div>
+      <div class="sidebar-personal-info-section">
         <p>{{ site.author.description }}</p>
       </div>
       {% if site.author.contact %} {% assign len = site.author.contact | size %}
