--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -281,6 +281,7 @@ tbody tr:nth-child(odd) th {
   margin-bottom: 1rem;
   padding: 1rem;
   color: #717171;
+  font-size: 0.9rem;
   background-color: #f9f9f9;
 }
 
