update: Change redirect email address on the sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,7 +32,7 @@
             <i class="fa fa-facebook" aria-hidden="true"></i>
           </a>
           |
-          <a href="mailto:vates0328@gmail.com">
+          <a href="mailto:daseulsong90@gmail.com">
             <i class="fa fa-envelope" aria-hidden="true"></i>
           </a>
           {% assign current_index = current_index | plus: 1 %} {% if
