--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,7 +24,7 @@
           Contact : {% for contact in site.author.contact %} {% assign iconname
           = contact[0] %} {% if contact[0] == 'email' %} {% assign iconname =
           'envelope' %} {% endif %}
-          <a href="{{ contact[1] }}" onclick="ga('send, 'event', [myGithubLink], [clickButton])";
+          <a href="{{ contact[1] }}"onclick="ga('send, 'event', myGithubLink, clickButton);"
             <i class="fa fa-{{ iconname }}" aria-hidden="true"></i>
           </a>
           |
