--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,7 +24,10 @@
           Contact : {% for contact in site.author.contact %} {% assign iconname
           = contact[0] %} {% if contact[0] == 'email' %} {% assign iconname =
           'envelope' %} {% endif %}
-          <a href="{{ contact[1] }}"onclick="ga('send', 'event', 'myGithubLink', 'clickButton');"
+          <a href="{{ contact[1] }}"onclick=gtag('event', 'select_content', {
+            'event_category': 'github',
+            'event_label': 'clickBtn'
+          });
             <i class="fa fa-{{ iconname }}" aria-hidden="true"></i>
           </a>
           |
