--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,10 +24,13 @@
           Contact : {% for contact in site.author.contact %} {% assign iconname
           = contact[0] %} {% if contact[0] == 'email' %} {% assign iconname =
           'envelope' %} {% endif %}
-          <a href="{{ contact[1] }}"onclick=”gtag('event', 'select_content', {
+          <a
+            href="{{ contact[1] }}"
+            onclick="gtag('event', 'select_content', {
             'event_category': 'github',
             'event_label': 'clickBtn'
-          });”>
+          });"
+          >
             <i class="fa fa-{{ iconname }}" aria-hidden="true"></i>
           </a>
           |
