--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
           'envelope' %} {% endif %}
           <a
             href="{{ contact[1] }}"
-            onclick="gtag('send', 'select_content', {
+            onclick="gtag('event', 'select_content', {
             'event_category': 'github',
             'event_label': 'clickBtn'
           });"
