--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,4 +51,11 @@
     MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$','$'], ["\\(","\\)"] ], processEscapes: true } });
   </script>
   {% endif %}
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+
+
+... (맞춤 프로그래밍 코드가 여기에 표시됩니다.)
+
+
+</script>
 </head>
