feat: Add event tracking on sidebar
github link

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,6 +32,7 @@
           'envelope' %} {% endif %}
           <a
             href="{{ contact[1] }}"
+            class="github-btn"
             onclick="gtag('event', 'select_content', {
             'event_category': 'github',
             'event_label': 'clickBtn'
