modify: Update an official email address
> @daseulsong90 -> @daseulsongme

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,7 @@
             <i class="fa fa-{{ iconname }}" aria-hidden="true"></i>
           </a>
           |
-          <a href="mailto:daseulsong90@gmail.com">
+          <a href="mailto:daseulsongme@gmail.com">
             <i class="fa fa-envelope" aria-hidden="true"></i>
           </a>
           {% assign current_index = current_index | plus: 1 %} {% if
